# aoc

./: .gitignore  LICENSE  create_day.py  pyproject.toml
aoc/2024/day1/: day1.py
aoc/2024/day10/: day10.py
aoc/2024/day12/: day12.py
aoc/2024/day14/: day14_2.py
aoc/2024/day15/: day15.py  day15_2.py
aoc/2024/day17/: day17.py  day17_2.py
aoc/2024/day18/: day18.py  day18_2.py
aoc/2024/day19/: day19.py  day19_2.py
aoc/2024/day2/: day2.py  day2_simplified.py
aoc/2024/day20/: day20.py
aoc/2024/day21/: day21.py
aoc/2024/day3/: day3.py
aoc/2024/day7/: day7.py
aoc/2025/day01/: day01.py
aoc/2025/day02/: day02.py
aoc/2025/day03/: day03.py
aoc/2025/day04/: day04.py
aoc/2025/day05/: day05.py
aoc/2025/day06/: day06.py
aoc/2025/day07/: day07.py
aoc/days/day1/: day1.py
aoc/days/day10/: day10.py
aoc/days/day11/: day11.py
aoc/days/day12/: day12.py
aoc/days/day13/: day13.py  day13_brute.py
aoc/days/day14/: day14.py
aoc/days/day15/: day15.py  day15_2.py
aoc/days/day16/: day16.py
aoc/days/day18/: day18.py  day18_2.py
aoc/days/day2/: day2.py
aoc/days/day3/: day3.py
aoc/days/day4/: day4.py
aoc/days/day5/: day5.py
aoc/days/day6/: day6.py
aoc/days/day7/: day7.py
aoc/days/day8/: day8.py
aoc/days/day9/: day9.py
aoc/helpers/: grid_helpers.py  lineReader.py
