[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Salmonwastaken <34370061+Salmonwastaken@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
