[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [{ name = "Salmonwastaken", email = "34370061+Salmonwastaken@users.noreply.github.com" }]
license = "MIT"
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "tqdm>=4.67.1,<5",
    "numpy>=2.2.0,<3",
    "matplotlib>=3.10.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
